# Fcitx5-Enhancer

./: .gitignore  .gitmodules  LICENSE.txt  README.md  build.gradle  gradle.properties  settings.gradle
common/: build.gradle
common/src/main/java/cn/xiaym/fcitx5/: Fcitx5.java  Fcitx5DBus.java  Fcitx5Wayland.java
common/src/main/java/cn/xiaym/fcitx5/async/: AsyncDispatcher.java
common/src/main/java/cn/xiaym/fcitx5/dbus/: Fcitx5Controller.java  Fcitx5Controller1.java  Fcitx5DBus.java
fabricWrapper/: build.gradle
fabricWrapper/src/main/resources/: fabric.mod.json
fabricWrapper/src/main/resources/assets/fcitx5-enhancer/lang/: en_us.json  zh_cn.json
src/main/java/cn/xiaym/fcitx5/: Fcitx5.java  GlobalState.java  IMBlockerListener.java  Main.java  MixinPlugin.java
src/main/java/cn/xiaym/fcitx5/compat/: ModMenuEntry.java
src/main/java/cn/xiaym/fcitx5/config/: BuiltinRuleSet.java  ModConfig.java  UserRuleListSqrEntry.java
src/main/java/cn/xiaym/fcitx5/mixins/: DrawContextMixin.java  EditBoxMixin.java  GameRendererMixin.java  GuiMixin.java  KeyboardHandlerInvoker.java  KeyboardHandlerMixin.java  KeyboardInvoker.java  KeyboardMixin.java  MinecraftClientMixin.java  MinecraftMixin.java  MouseHandlerMixin.java  MouseMixin.java  Plugin.java  ScreenMixin.java  TextFieldWidgetMixin.java  WindowMixin.java
src/main/java/cn/xiaym/fcitx5/screen/: ElementRuleEditScreen.java  IncompatibleNoticeScreen.java  ScreenRuleEditScreen.java
src/main/resources/: fabric.mod.json  fcitx5-enhancer.mixins.json
src/native/: CMakeLists.txt  cn_xiaym_fcitx5_Fcitx5.h  main.cpp
src/native/base/: CMakeLists.txt
src/native/wayland/: CMakeLists.txt  cn_xiaym_fcitx5_Fcitx5Wayland.h  main.cpp
versions/1.16.5/: gradle.properties
versions/1.20/: gradle.properties
versions/1.20.4/: gradle.properties
versions/1.20.6/: gradle.properties
versions/1.21.1/: gradle.properties
versions/1.21.10/: gradle.properties
versions/1.21.11/: build.gradle  gradle.properties
versions/1.21.4/: build.gradle  gradle.properties
versions/1.21.5/: build.gradle  gradle.properties
versions/1.21.7/: gradle.properties
versions/1.21.8/: build.gradle  gradle.properties
versions/25w14craftmine/: gradle.properties
versions/26.1.2/: build.gradle  gradle.properties
versions/26.2/: build.gradle  gradle.properties
(+5 files in other folders)
